Fixed background of Footer on tablet breackpoint pass.

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -132,6 +132,79 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    background-image: linear-gradient(
+        135deg,
+        rgba(32, 32, 32, 1) 0%,
+        rgba(32, 32, 32, 1) 1%,
+        rgba(240, 240, 240, 1) 1%,
+        rgba(240, 240, 240, 1) 4%,
+        rgba(32, 32, 32, 1) 4%,
+        rgba(32, 32, 32, 1) 5%,
+        rgba(240, 240, 240, 1) 5%,
+        rgba(240, 240, 240, 1) 8%,
+        rgba(32, 32, 32, 1) 8%,
+        rgba(32, 32, 32, 1) 9%,
+        rgba(240, 240, 240, 1) 9%,
+        rgba(240, 240, 240, 1) 12%,
+        rgba(32, 32, 32, 1) 12%,
+        rgba(32, 32, 32, 1) 13%,
+        rgba(240, 240, 240, 1) 13%,
+        rgba(240, 240, 240, 1) 16%,
+        rgba(32, 32, 32, 1) 16%,
+        rgba(32, 32, 32, 1) 17%,
+        rgba(240, 240, 240, 1) 17%,
+        rgba(240, 240, 240, 1) 20%,
+        rgba(32, 32, 32, 1) 20%,
+        rgba(32, 32, 32, 1) 21%,
+        rgba(240, 240, 240, 1) 21%,
+        rgba(240, 240, 240, 1) 24%,
+        rgba(32, 32, 32, 1) 24%,
+        rgba(32, 32, 32, 1) 25%,
+        rgba(240, 240, 240, 1) 25%,
+        rgba(240, 240, 240, 1) 28%,
+        rgba(32, 32, 32, 1) 28%,
+        rgba(32, 32, 32, 1) 29%,
+        rgba(240, 240, 240, 1) 29%
+      ),
+      linear-gradient(
+        45deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(32, 32, 32, 1) 1%,
+        rgba(240, 240, 240, 1) 1%,
+        rgba(240, 240, 240, 1) 4%,
+        rgba(32, 32, 32, 1) 4%,
+        rgba(32, 32, 32, 1) 5%,
+        rgba(240, 240, 240, 1) 5%,
+        rgba(240, 240, 240, 1) 8%,
+        rgba(32, 32, 32, 1) 8%,
+        rgba(32, 32, 32, 1) 9%,
+        rgba(240, 240, 240, 1) 9%,
+        rgba(240, 240, 240, 1) 12%,
+        rgba(32, 32, 32, 1) 12%,
+        rgba(32, 32, 32, 1) 13%,
+        rgba(240, 240, 240, 1) 13%,
+        rgba(240, 240, 240, 1) 16%,
+        rgba(32, 32, 32, 1) 16%,
+        rgba(32, 32, 32, 1) 17%,
+        rgba(240, 240, 240, 1) 17%,
+        rgba(240, 240, 240, 1) 20%,
+        rgba(32, 32, 32, 1) 20%,
+        rgba(32, 32, 32, 1) 21%,
+        rgba(240, 240, 240, 1) 21%,
+        rgba(240, 240, 240, 1) 24%,
+        rgba(32, 32, 32, 1) 24%,
+        rgba(32, 32, 32, 1) 25%,
+        rgba(240, 240, 240, 1) 25%,
+        rgba(240, 240, 240, 1) 28%,
+        rgba(32, 32, 32, 1) 28%,
+        rgba(32, 32, 32, 1) 29%,
+        rgba(240, 240, 240, 1) 29%
+      );
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer {
     background-image: linear-gradient(
